[project]
name = "quantforge"
version = "0.1.0"
description = "A proect to test and develop quantitative trading strategies"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "rich>=13.9.4",
    "seaborn>=0.13.2",
    "yfinance>=0.2.54",
    "tqdm (>=4.67.1,<5.0.0)",
    "click>=8.1.8",
    "scipy>=1.15.2",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.11.1",
    "ta>=0.11.0",
]


# Update ruff config to include src directory
[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]
# Update include pattern to focus on src directory
include = ["./src/**/*.py", "./tests/**/*.py"]

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Target all Python files
select = ["E", "F", "B"]  # Error, Formatting, and Bugbear rules
ignore = ["E501"]  # Ignore line length violations

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py files

[tool.uv]
dev-dependencies = [
    "isort>=6.0.1",
    "ruff>=0.4.4",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=4.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "-v",
    "--cov=src/quantforge",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-report=html:cov_html",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take longer to run",
]
console_output_style = "progress"

[tool.coverage.run]
omit = ["src/quantforge/db/data_insertion.py"]
